--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Grokking Algorithms - LeetCode Practice</title>
+  <title>Algoskills - algorithm practice</title>
   <style>
     /* Basic reset and layout */
     * {
